[package]
name = "shiva"
version = "0.0.1"
edition = "2021"

authors = ["Evgeny Igumnov <igumnovnsk@gmail.com>"]
repository = "https://github.com/igumnoff/shiva"
documentation = "https://docs.rs/shiva"
license-file = "../LICENSE"
keywords = ["parser"]
categories = ["parser-implementations"]
readme = "README.md"
description = "Shiva library: Implementation in Rust of a parser and generator for documents of any type"




[dependencies]
anyhow = "1.0.75"
thiserror = "1.0.44"
regex = "1.10.3"
bytes = "1.5.0"
scraper = "0.19.0"
ego-tree = "0.6.2"
lopdf = "0.32.0"

[dev-dependencies]
env_logger = "0.10.0"
