[package]
name = "rest_api_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tower-http = { version = "0.5.2", features = ["fs"] }
tower-cookies = "0.10.0"
lazy-regex = "3.1.0"
async-trait = "0.1.80"
strum_macros = "0.26.2"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"]}
serde_with = "3.7.0"

[dev-dependencies]
anyhow = "1.0.82"
httpc-test = "0.1.1"