[package]
name = "rest_api_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version =  "0.7.5", features = ["multipart"] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.199", features = ["derive"] }
futures-util = "0.3.30"
shiva = "0.3.1"
clap = { version = "4.5.4", features = ["derive"] }
strum_macros = "0.26.2"
tracing = "0.1.40"
hyper = "1.3.1"
reqwest = { version = "0.11.27", features = ["multipart"] }
env_logger = "0.11.3"
log = "0.4.21"

[dev-dependencies]
httpc-test = "0.1.9"
anyhow = "1.0.82"
printpdf = "0.7.0"