[package]
name = "server"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = {version =  "0.7.5", features = ["multipart"] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.199", features = ["derive"] }
futures-util = "0.3.30"
#shiva = "0.4.0"
shiva = { path = "../lib" }
clap = { version = "4.5.3", features = ["derive"] }
strum_macros = "0.26.2"
tracing = "0.1.40"
hyper = "1.3.1"
reqwest = { version = "0.12.4", features = ["multipart"] }
env_logger = "0.11.3"
log = "0.4.21"
zip = "0.6"
tower-http = { version = "0.5.2", features = ["limit", "tracing"] }
anyhow = "1.0.82"
log = "0.4.20"

[dev-dependencies]
httpc-test = "0.1.9"
printpdf = "0.7.0"
log = "0.4.20"