[package]
name = "wasm"
version = "0.1.0"
authors = ["Evgeny Igumnov <igumnovnsk@gmail.com>", "longlom <longlom@yandex.ru>"]
edition = "2021"



[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
shiva = {  path = "../shiva/lib", features = ["html", "markdown", "pdf", "docx"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
getrandom = { version = "0.2", features = ["js"] }
reqwest = { version = "0.12.4",  features = ["blocking"]}

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"